--- a/Views/Lecturers/Index.cshtml
+++ b/Views/Lecturers/Index.cshtml
@@ -39,3 +39,11 @@
 }
     </tbody>
 </table>
+
+@section Scripts{
+    <script>
+        $(function(){
+            $('.table').DataTable();
+        })
+    </script>
+}
