--- a/Views/Students/Index.cshtml
+++ b/Views/Students/Index.cshtml
@@ -45,3 +45,10 @@
 }
     </tbody>
 </table>
+@section Scripts{
+    <script>
+        $(function(){
+            $('.table').DataTable();
+        })
+    </script>
+}
